# python-ocr

./: README.md  main.py  pyproject.toml  requirements.txt
