[project]
name = "python-ocr"
version = "0.1.0"
description = "ocr python"
authors = [
    {name = "paulo-sergio",email = "paulo_sergio2006@hotmail.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr (>=1.7.2,<2.0.0)",
    "natsort (>=8.4.0,<9.0.0)"
]
[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
